# ROOT_post_processing

./: ArDriftVel.txt  CMakeLists.txt  CleanCompile.sh  FFT_fit.cpp  ROOT_readme.txt  ROOT_win_readme.txt  Readme.txt  Recompile.sh  SiPM_Ss.cpp  SiPM_cuts.cpp  SiPM_double_I.cpp  SiPM_form.cpp  SiPM_profile_subtract.cpp  compare_forms.cpp  cutters.cpp  e_trapping_W_fit.cpp  e_trapping_model_fit.cpp  e_trapping_simulation.cpp  gem.cpp  gem1.cpp  init.cpp  loader.cpp  macro.cpp  plot_taus1_comparisson_PMTs.sc  plot_taus1_comparisson_SiPMs.sc  plot_taus2_comparisson.sc  qconvert_to_txt.cpp  utility.cpp
170615/: ncompare_forms.cpp
170622/: 5analysis_history.cpp  S_t_cuts.cpp  init.cpp  ncompare_forms.cpp  x_script.cpp
171123/: S_t_cuts.cpp  SiPM_Ss.cpp  SiPM_cuts.cpp  SiPM_form.cpp  cutters.cpp  gem.cpp  macro.cpp
171221/: S_t_cuts.cpp
180215/: PMT_S2_time.cpp  S_t_cuts.cpp  SiPM_Ss.cpp  SiPM_cuts.cpp  SiPM_form.cpp
180222/: PMT_S2_time.cpp  S_t_cuts.cpp  SiPM_Ss.cpp  SiPM_cuts.cpp  SiPM_double_I.cpp  SiPM_form.cpp  cutters.cpp
180705/: 2analysis_history.cpp  3analysis_history.cpp  4analysis_history.cpp  5analysis_history.cpp  7analysis_history.cpp  S_t_cuts.cpp  analysis_history.cpp  compare_forms.cpp  init.cpp  lcompare_forms.cpp  ncompare_forms.cpp  vcompare_forms.cpp  x_script.cpp  x_y_region.cpp  zcompare_forms.cpp
180830_Xray/: 2analysis_history.cpp  init.cpp  x_script.cpp
190124/: S_t_cuts.cpp  x_y_region.cpp
190131/: 3analysis_history.cpp  analysis_history.cpp  compare_forms.cpp  init.cpp  x_script.cpp
190228/: 2analysis_history.cpp  3analysis_history.cpp  analysis_history.cpp  compare_forms.cpp  init.cpp  x_script.cpp
190307/: 3analysis_history.cpp  analysis_history.cpp  compare_forms.cpp  init.cpp  x_script.cpp  x_y_region.cpp
190307_Xray/: analysis_history.cpp  init.cpp  ncompare_forms.cpp  x_script.cpp
(+294 files in other folders)
